--- a/squareGame/style.css
+++ b/squareGame/style.css
@@ -32,3 +32,11 @@ htm,body{
     margin-top: 10px;
     margin-left: 10px;
 }
+
+#cursor{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: rgb(229, 10, 236);
+    position: absolute;
+}
